add plugin build jar

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,6 @@ jobs:
       with:
         name: jacoco-report
         path: target/site/jacoco/
+
+    - name: Step 6 - List the current directory
+      run: cd target | ls -la
