--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
       id: jacoco
       uses: cicirello/jacoco-badge-generator@v2
       with:
+        badges-directory: .github/badges
         generate-branches-badge: true
 
     - name: Step 5 - Log coverage percentage
