add commit and push badge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,15 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco/
 
-    - name: Step 6 - List the current directory
-      run: cd target && ls -la
+    - name: Step 7 - Commit badge
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .github/badges/badge.svg
+          git commit -m "Add/Update badge"
+
+    - name: Step 8 -  Push badge commit
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ steps.extract_branch.outputs.branch }}
