--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,13 @@ jobs:
 
     - name: Step 4 - Generate JaCoCo Badge
       id: jacoco
-      uses: cicirello/jacoco-badge-generator@v2
+      uses: cicirello/jacoco-badge-generator@v2.7.0
       with:
         badges-directory: .github/badges
-        generate-branches-badge: true
+        generate-coverage-badge: true
+        coverage-badge-filename: jacoco.svg
+        generate-branches-badge: false
+        branches-badge-filename: branches.svg
 
     - name: Step 5 - Log coverage percentage
       run: |
@@ -39,15 +42,15 @@ jobs:
         name: jacoco-report
         path: target/site/jacoco/
 
-    - name: Step 7 - Commit badge
-      uses: EndBug/add-and-commit@v7
-      with:
-        default_author: github_actions
-        message: 'commit badge'
-        add: '*.svg'
-
-    - name: Step 8 -  Push badge commit
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ steps.extract_branch.outputs.branch }}
+#    - name: Step 7 - Commit badge
+#      uses: EndBug/add-and-commit@v7
+#      with:
+#        default_author: github_actions
+#        message: 'commit badge'
+#        add: '*.svg'
+#
+#    - name: Step 8 -  Push badge commit
+#      uses: ad-m/github-push-action@master
+#      with:
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        branch: ${{ steps.extract_branch.outputs.branch }}
